<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrador.roca.EjemploLayoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">
            <ImageView
                android:id="@+id/idImagen"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription=""
                tools:ignore="ContentDescription" />
            <ImageView
                android:id="@+id/idImage02"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_launcher_round"
                tools:ignore="ContentDescription,RtlHardcoded" />
            <TextView
                android:id="@+id/idText01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idtexto_zulia"
                android:layout_toRightOf="@+id/idImagen"
                android:layout_toLeftOf="@+id/idImage02"
                tools:ignore="RtlHardcoded" />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idtexto_contenido"
                android:layout_toRightOf="@+id/idImagen"
                android:layout_below="@+id/idText01"
                android:layout_toLeftOf="@+id/idImage02"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/TextViewHola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hola"
                android:textColor="#ffffff"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jorge"
                android:textColor="#ffffff"
                android:layout_below="@+id/TextViewHola"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/TextViewHola"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>
    </LinearLayout>



</RelativeLayout>
